---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E401 [*] Multiple imports on one line
 --> E40.py:2:1
  |
1 | #: E401
2 | import os, sys
  | ^^^^^^^^^^^^^^
3 |
4 | #: Okay
  |
help: Split imports
  |
2 + import os
3 + import sys
  |

E401 [*] Multiple imports on one line
  --> E40.py:65:1
   |
64 | #: E401
65 | import re as regex, string  # also with a comment!
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
66 | import re as regex, string; x = 1
   |
help: Split imports
   |
65 + import re as regex
66 ~ import string  # also with a comment!
   |

E401 [*] Multiple imports on one line
  --> E40.py:66:1
   |
64 | #: E401
65 | import re as regex, string  # also with a comment!
66 | import re as regex, string; x = 1
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
67 |
68 | x = 1; import re as regex, string
   |
help: Split imports
   |
66 - import re as regex, string; x = 1
66 + import re as regex; import string; x = 1
   |

E401 [*] Multiple imports on one line
  --> E40.py:68:8
   |
66 | import re as regex, string; x = 1
67 |
68 | x = 1; import re as regex, string
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^
help: Split imports
   |
68 - x = 1; import re as regex, string
68 + x = 1; import re as regex; import string
   |

E401 [*] Multiple imports on one line
  --> E40.py:72:5
   |
71 | def blah():
72 |     import datetime as dt, copy
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
73 |
74 |     def nested_and_tested():
   |
help: Split imports
   |
72 +     import datetime as dt
73 +     import copy
   |

E401 [*] Multiple imports on one line
  --> E40.py:75:9
   |
74 |     def nested_and_tested():
75 |         import builtins, textwrap as tw
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
76 |
77 |         x = 1; import re as regex, string
   |
help: Split imports
   |
75 +         import builtins
76 +         import textwrap as tw
   |

E401 [*] Multiple imports on one line
  --> E40.py:77:16
   |
75 |         import builtins, textwrap as tw
76 |
77 |         x = 1; import re as regex, string
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^
78 |         import re as regex, string; x = 1
   |
help: Split imports
   |
77 -         x = 1; import re as regex, string
77 +         x = 1; import re as regex; import string
   |

E401 [*] Multiple imports on one line
  --> E40.py:78:9
   |
77 |         x = 1; import re as regex, string
78 |         import re as regex, string; x = 1
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^
79 |
80 |     if True: import re as regex, string
   |
help: Split imports
   |
78 -         import re as regex, string; x = 1
78 +         import re as regex; import string; x = 1
   |

E401 [*] Multiple imports on one line
  --> E40.py:80:14
   |
78 |         import re as regex, string; x = 1
79 |
80 |     if True: import re as regex, string
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^
help: Split imports
   |
80 -     if True: import re as regex, string
80 +     if True: import re as regex; import string
   |
